--- a/records/FGVC-HERBS/basline/config.yaml
+++ b/records/FGVC-HERBS/basline/config.yaml
@@ -8,7 +8,7 @@ val_root: ./CUB200-2011/test/
 data_size: 384
 num_workers: 2
 batch_size: 1
-model_name: swin-t2
+model_name: vit
 pretrained: ~
 optimizer: SGD
 max_lr: 0.0005
